--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ResidenceManager"
         tools:targetApi="31">
+
+        <activity
+            android:name=".Connexion.EnregistrementActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true" />
+        <activity
+            android:name=".Connexion.ConnexionActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
