--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,11 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".Connexion.EnregistrementActivity"
+            android:name=".connexion.EnregistrementActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true" />
         <activity
-            android:name=".Connexion.ConnexionActivity"
+            android:name=".connexion.ConnexionActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true" />
         <activity
