--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,8 +50,7 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ResidenceManager.NoActionBar">
-        </activity> <!-- Theme is optional and only needed if default theme has no action bar. -->
-        <activity android:name="com.canhub.cropper.CropImageActivity" />
+        </activity>
     </application>
 
 </manifest>
